# wayfinder

./: .gitignore  .gitmodules  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_lua_link  test_lua_link.c  test_script.lua
.cargo/: config.toml
.github/workflows/: docs.yml
.opencode/: opencode.jsonc
crates/wayfinder-cli/: Cargo.toml  debug_init.lua
crates/wayfinder-cli/src/: bin.rs  config_mod.rs  lib.rs
crates/wayfinder-cli/src/commands/: attach.rs  dap.rs  hot_reload.rs  launch.rs
crates/wayfinder-core/: Cargo.toml  build.rs
crates/wayfinder-core/benches/: lua_loading.rs  lua_loading_criterion.rs  luanext_sourcemap.rs
crates/wayfinder-core/src/: config.rs  lib.rs  sourcemap.rs
crates/wayfinder-core/src/dap/: mod.rs  transport.rs
crates/wayfinder-core/src/debug/: breakpoints.rs  conditions.rs  hit_conditions.rs  logpoints.rs  mod.rs  watchpoints.rs
crates/wayfinder-core/src/hot_reload/: hot_reload.rs  mod.rs  service.rs  state_capture.rs
crates/wayfinder-core/src/inject/: simple_watchpoint.lua  watchpoint.lua
crates/wayfinder-core/src/memory/: mod.rs
crates/wayfinder-core/src/profiling/: mod.rs
crates/wayfinder-core/src/runtime/: lua_ffi.rs  lua_init.rs  lua_loader.rs  lua_state.rs  luanext.rs  luanext_hot_reload.rs  mock.rs  mod.rs  puc_lua.rs  puc_lua_hot_reload.rs
crates/wayfinder-core/src/session/: mod.rs
crates/wayfinder-core/tests/: breakpoint_tests.rs  dap_protocol_tests.rs  dynamic_loading_test.rs  expression_evaluation_tests.rs  integration_tests.rs  lua_version_tests.rs  luanext_integration_tests.rs  luanext_sourcemap_tests.rs  phase3_evaluate_tests.rs  phase3_integration_tests.rs  phase3_tests.rs  phase3_watchpoint_tests.rs  variable_inspection_tests.rs
crates/wayfinder-luax/: Cargo.toml
crates/wayfinder-luax/src/: lib.rs
crates/wayfinder-tl/: Cargo.toml
crates/wayfinder-tl/src/: config.rs  coroutine.rs  dap_wrapper.rs  lib.rs  source_map.rs  translator.rs
docs/: BENCHMARKS.md  DESIGN.md  MULTI_VERSION_IMPLEMENTATION.md  NEXT_TO_DO.md  PHASE3_PROGRESS.md  TODO.md  building.md  debugging.md  design.md
docs-site/: book.toml  documentation-plan.md
docs-site/src/: introduction.md  summary.md
docs-site/src/api/: index.md
docs-site/src/contributing/: development-setup.md
docs-site/src/getting-started/: installation.md  quick-start.md
docs-site/src/guides/: hot-code-reload.md  ide-integration.md  luanext-debugging.md  multi-version-support.md
docs-site/src/language/: breakpoints.md  call-stack.md  debugging-basics.md  expressions.md  variables.md
docs-site/src/reference/: cli-commands.md  configuration.md  dap-protocol.md  error-codes.md
docs/hot_reload/: limitations.md
editors/jetbrains/: README.md  build.gradle.kts
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/: WayfinderDebuggerComponent.kt  WayfinderProjectComponent.kt
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/actions/: DebugFileAction.kt  ListRuntimesAction.kt  SelectRuntimeAction.kt
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/breakpoints/: LuaLineBreakpointType.kt
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/config/: ProjectConfiguration.kt  RuntimeManager.kt  WayfinderConfiguration.kt
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/execution/: LuaDebuggerSupport.kt
editors/jetbrains/src/main/kotlin/com/wayfinder/lua/debugger/run/: WayfinderConfigurationFactory.kt  WayfinderConfigurationType.kt  WayfinderProgramRunner.kt  WayfinderRunConfiguration.kt  WayfinderRunConfigurationEditor.kt  WayfinderRunConfigurationProducer.kt
editors/neovim/: .gitignore  INSTALLATION.md  README.md  STRUCTURE.md  USAGE.md
editors/neovim/lua/wayfinder/: commands.lua  config.lua  dap.lua  init.lua  telescope.lua
editors/neovim/plugin/: wayfinder.vim
editors/vscode/: .eslintrc.json  .gitignore  DEVELOPMENT.md  IDE_EXTENSIONS_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
editors/vscode/examples/: .vscode-launch.json  .vscode-settings.json
editors/vscode/src/: adapter.ts  commands.ts  configuration.ts  debug-provider.ts  extension.ts  runtime-manager.ts
editors/zerobrane/: .gitignore  README.md  plugin.lua  wayfinder.lua
scripts/: README.md  install_lua_versions.sh  run_benchmarks.sh  test_lua_versions.sh
src/: main.rs
