[package]
name = "wayfinder"
version = "0.1.0"
edition = "2021"
description = "Debug Adapter Protocol implementation for Lua and LuaNext"
authors = ["Wayfinder Contributors"]

[workspace]
members = [
    "crates/wayfinder-core",
    "crates/wayfinder-cli",
    "crates/wayfinder-tl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wayfinder Contributors"]
license = "MIT"
repository = "https://github.com/forge18/wayfinder"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
blake3 = "1.5"
bitflags = "2.6"
bumpalo = "3.16"
rustc-hash = "2.1"
indexmap = { version = "2.6", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"
tracing = "0.1"
rayon = "1.10"
insta = "1.40"
criterion = "0.5"
tempfile = "3.13"
proptest = "1.5"
dhat = "0.3"

[dependencies]
wayfinder-cli = { path = "crates/wayfinder-cli" }
luanext-sourcemap = { path = "crates/luanext/crates/luanext-sourcemap" }