[package]
name = "wayfinder-core"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
luanext-sourcemap = { path = "../luanext/crates/luanext-sourcemap" }
libc = "0.2"
regex = "1.0"
libloading = { version = "0.8", optional = true }

[features]
default = ["static-lua"]
hot-reload = []
dynamic-lua = ["libloading"]
static-lua = []

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile.workspace = true
base64.workspace = true

[[bench]]
name = "lua_loading"
harness = false

[[bench]]
name = "lua_loading_criterion"
harness = false

[[bench]]
name = "luanext_sourcemap"
harness = false