[package]
name = "wayfinder-tl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
# Using the luanext-sourcemap from the submodule
luanext-sourcemap = { path = "../luanext/crates/luanext-sourcemap" }

[lib]
name = "wayfinder_tl"
path = "src/lib.rs"